(test
 (name test_sysf)
 (modules test_sysf)
 (libraries flat))

(test
 (name test_hm_base)
 (modules test_hm_base))

(test
 (name test_hm_strong)
 (modules test_hm_strong)
 (libraries flat grenier.baltree))

(test
 (name test_hm_strong_abs)
 (modules test_hm_strong_abs)
 (libraries flat grenier.baltree))
