(test
 (name test_sysf)
 (modules test_sysf)
 (libraries strongenv))

(test
 (name test_hm_base)
 (modules test_hm_base))

(test
 (name test_hm_strong)
 (modules test_hm_strong)
 (libraries strongenv grenier.baltree grenier.dbseq))

(test
 (name test_hm_strong_abs)
 (modules test_hm_strong_abs)
 (libraries strongenv grenier.baltree grenier.dbseq))
